# claude_code_session_client

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: multi_turn_conversation.py  simple_example.py
src/claude_code_session_client/: __init__.py  session_client.py  types.py
src/claude_code_session_client/_internal/: __init__.py  session_storage.py
tests/: __init__.py  test_session_storage.py
